    Wording:  Charles Plessy <plessy@debian.org>
    Seconded: Bill Allombert <ballombe@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #617516
  * copyright-format: remove drivers from abstract and useless appendix
    Wording: Lars Wirzenius <liw@liw.fi>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #640735
  * Perl policy: Document major version upgrade trigger
    Wording: Dominic Hargreaves <dom@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Niko Tyni <ntyni@debian.org>
    Seconded: Gregor Herrmann <gregoa@debian.org>
    Closes: #619275
  * Virtual: change ttf-japanese-{mincho, gothic} to
    fonts-japanese-{mincho, gothic}.
    Proposed by: Nobuhiro Iwamatsu <iwamatsu@nigauri.org>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Bill Allombert <ballombe@debian.org>
    Closes: #644230
  * Policy 9.10: No more recommend to call install-docs for doc-base.
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: Robert Luberda <robert@debian.org>
    Seconded: Raphael Hertzog <hertzog@debian.org>
    Closes: #637614

 -- Bill Allombert <ballombe@debian.org>  Mon, 28 Nov 2011 12:55:12 +0100

debian-policy (3.9.2.0) unstable; urgency=low

  * Policy: Require human Maintainer or Uploader, clarify Maintainer
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Raphaël Hertzog <hertzog@debian.org>
    Closes: #459868, #581011
  * Policy: Add an FHS exception on GNU/Hurd for /hurd and /servers
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Seconded: Guillem Jover <guillem@debian.org>
    Closes: #594658
  * Policy: Document DM-Upload-Allowed
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Seconded: Russ Allbery <rra@debian.org>
    Closes: #588014